--- a/workbook-4/java-development/HotelOperations/pom.xml
+++ b/workbook-4/java-development/HotelOperations/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pluralsight</groupId>
-    <artifactId>unit-test-demos</artifactId>
+    <artifactId>HotelOperations</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
